--- a/home.html
+++ b/home.html
@@ -133,72 +133,10 @@
 
   <!-- Content -->
     <div class="relative z-10">
-      <!-- <div class = "flex w-5/6 px-6 mx-auto flex-col items-start justify-center text-center">
-
-        <div class = "text-5xl font-semibold mb-20">Lorem ipsum dolor sit amet.</div>
-        <div class = "flex justify-center items-center gap-4">
-          <div class = "rounded-md border-[0.5px] border-[#021E05] p-4 flex flex-col items-start justify-center">
-            <div class = "text-start text-2xl font-semibold mb-2">01</div>
-            <div class = "text-start text-2xl font-semibold mb-2">Lorem ipsum dolor sit amet.</div>
-            <p class = "text-start text-lg text-[#021E05]">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, impedit?</p>
-          </div>
-
-          <div class = "rounded-md border-[0.5px] border-[#021E05] p-4 flex flex-col items-start justify-center">
-            <div class = "text-start text-2xl font-semibold mb-2">01</div>
-            <div class = "text-start text-2xl font-semibold mb-2">Lorem ipsum dolor sit amet.</div>
-            <p class = "text-start text-lg text-[#021E05]">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, impedit?</p>
-          </div>
-
-          <div class = "rounded-md border-[0.5px] border-[#021E05] p-4 flex flex-col items-start justify-center">
-            <div class = "text-start text-2xl font-semibold mb-2">01</div>
-            <div class = "text-start text-2xl font-semibold mb-2">Lorem ipsum dolor sit amet.</div>
-            <p class = "text-start text-lg text-[#021E05]">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, impedit?</p>
-          </div>  
-        </div>
-      </div> -->
-
-       <!-- Alternatif Page 1 -->
-        <!-- <div class = "text-[#021E05] min-h-screen bg-[#FFFBF2] py-28">
-          <div>
-            <div class="hidden lg:flex container overflow-x-auto min-w-max ">
-                <div class="flex-shrink-0 h-screen w-[1000px] mr-4">
-                    <div class="flex items-center justify-center h-5/6 w-5/6 mx-auto rounded-3xl">
-                        <h1 class="text-7xl font-bold mb-4 text-text-[#021E05] text-start">How does <br> <span class = "text-[#EBB902]">co-ownership</span> work?</h1>
-                    </div>
-                </div>
-
-                <div class="flex-shrink-0 h-5/6 w-[1000px] mr-4 flex items-center justify-center">
-                  <div class = "rounded-md border-[0.5px] border-[#021E05] h-5/6 p-10 flex flex-col items-start justify-center">
-                    <div class = "text-start text-3xl font-semibold mb-2">01</div>
-                    <div class = "text-start text-3xl font-semibold mb-2">Lorem ipsum dolor sit amet.</div>
-                    <p class = "text-start text-xl text-[#021E05]">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, impedit?</p>
-                  </div>
-                </div>
-
-                <div class="flex-shrink-0 h-5/6 w-[1000px] mr-4 flex items-center justify-center">
-                  <div class = "rounded-md border-[0.5px] border-[#021E05] h-5/6 p-10 flex flex-col items-start justify-center">
-                    <div class = "text-start text-3xl font-semibold mb-2">02</div>
-                    <div class = "text-start text-3xl font-semibold mb-2">Lorem ipsum dolor sit amet.</div>
-                    <p class = "text-start text-xl text-[#021E05]">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, impedit?</p>
-                  </div>
-                </div>
-
-                <div class="flex-shrink-0 h-5/6 w-[1000px] mr-4 flex items-center justify-center">
-                  <div class = "rounded-md border-[0.5px] border-[#021E05] h-5/6 p-10 flex flex-col items-start justify-center">
-                    <div class = "text-start text-3xl font-semibold mb-2">03</div>
-                    <div class = "text-start text-3xl font-semibold mb-2">Lorem ipsum dolor sit amet.</div>
-                    <p class = "text-start text-xl text-[#021E05]">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, impedit?</p>
-                  </div>
-                </div>
-          </div>
-          </div>
-          
-      </div> -->
-
 
       <!--  Page 1 -->
 
-      <div class = "text-[#021E05] bg-[#FFFBF2] py-28">
+      <!-- <div class = "text-[#021E05] bg-[#FFFBF2] py-28">
           <div class = "flex w-5/6 px-6 mx-auto flex-col items-start justify-center text-center">
             <div class = "text-5xl font-semibold mb-20">Lorem ipsum dolor sit amet.</div>
             <div class = "flex justify-center items-center gap-4">
@@ -222,17 +160,17 @@
             </div>
           </div>
           
-      </div>
+      </div> -->
 
 
       <div class = "min-h-screen text-[#021E05] bg-[#FFFBF2] py-28">
-          <div class = "flex gap-x-8 w-5/6 px-6 mx-auto items-center justify-center">
-            <div class="relative w-1/4 mb-20 h-full">
+          <div class = "flex gap-x-8 w-5/6 px-6 mx-auto items-center justify-center h-[57vh]">
+            <div class="relative w-1/4 h-full">
               <!-- Background Image -->
-              <img src="kuta.jpg" alt="Background" class="absolute inset-0 w-full object-cover opacity-30 z-0">
+              <img src="kuta.jpg" alt="Background" class="absolute h-[57vh] inset-0 w-full object-cover opacity-60 z-0">
 
               <!-- Text on top -->
-              <div class="relative top-0 left-0 text-5xl font-semibold text-black z-10">
+              <div class="relative text-5xl font-semibold text-black z-10">
                 Lorem ipsum dolor sit amet.
               </div>
             </div>
@@ -730,7 +668,7 @@
       <!--Grid-->
       <div class="py-7 border-t border-gray-200">
       <div class="flex items-center justify-center flex-col lg:justify-between lg:flex-row">
-      <span class="text-sm text-gray-500 ">©<a href="https://pagedone.io/">pagedone</a> 2024, All rights reserved.</span>
+      <span class="text-sm text-gray-500 ">©<a href="https://pagedone.io/">Sakanta</a> 2024, All rights reserved.</span>
       <div class="flex mt-4 space-x-4 sm:justify-center lg:mt-0 ">
         <a href="javascript:;" class="w-9 h-9 rounded-full bg-gray-700 flex justify-center items-center hover:bg-indigo-600">
           <svg class=" text-white" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
