--- a/learn-more.html
+++ b/learn-more.html
@@ -210,8 +210,8 @@
 
         <div class="grid grid-cols-1 xl:grid-cols-2 gap-6 relative z-10 text-white">
             <div class="flex flex-col justify-center items-start p-10 rounded-xl">
-                <h2 class="text-3xl font-bold mb-4">Book Your Stay</h2>
-                <p class="mb-6">Experience the luxury and tranquility of our Panoramic Pool Villa. Book now for an unforgettable getaway.</p>
+                <h2 class="text-3xl font-bold mb-4 text-[#FAF3E1]">Book Your Stay</h2>
+                <p class="mb-6 text-[#FAF3E1]">Experience the luxury and tranquility of our Panoramic Pool Villa. Book now for an unforgettable getaway.</p>
             </div>
             <div class="flex justify-center items-center h-full">
                 <div class="h-full mt-20 w-4/5 bg-white rounded-xl shadow-xl p-6 flex flex-col bg-opacity-70 backdrop-blur-lg">
@@ -228,7 +228,7 @@
                             <textarea placeholder="Your Message" class="w-full p-2 mb-4 border rounded opacity-70 placeholder-opacity-70 placeholder-gray-500"></textarea>
                         </div>
                         <div class="mt-auto text-left mb-10">
-                            <button type="submit" class="bg-[#021E05] hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded">
+                            <button type="submit" class="bg-[#021E05] hover:font-bold text-[#FAF3E1] font-semibold py-2 px-4 rounded">
                             Send Message
                             </button>
                         </div>
