--- a/learn-more.html
+++ b/learn-more.html
@@ -41,7 +41,7 @@
     </div>
 
   <!-- Navbar -->
-  <nav id="navbar" class="fixed top-0 left-0 w-full z-40 flex items-center justify-between px-6 py-4 2xl:py-6 shadow-sm transition-transform duration-300 bg-[#021E05]">
+  <nav id="navbar" class="fixed top-0 left-0 w-full z-40 flex items-center justify-between px-6 py-4 2xl:py-6 shadow-sm transition-transform duration-300 bg-[#163832]">
     
     <div class="flex items-center justify-between w-5/6 mx-auto">
       <div class="text-[#FFFBF2] hover:text-[#E5DFC9] text-xl xl:text-2xl 2xl:text-3xl font-bold">MyBrand</div>
@@ -75,7 +75,7 @@
 
 <div class="w-full relative mx-auto pt-20">
 
-    <div class="absolute top-0 left-0 w-full h-[70vh] bg-[#021E05] z-0"></div>
+    <div class="absolute top-0 left-0 w-full h-[70vh] bg-[#163832] z-0"></div>
 
     <div class="relative z-10 w-4/5 mx-auto text-gray-800">
         <h1 class="text-center text-sm sm:text-lg md:text-xl mb-5 mt-10 text-[#EBB902]">PRIVATE VILLAS</h1>
@@ -170,7 +170,7 @@
 
 
     
-    <div class="grid grid-cols-1 md:grid-cols-[1fr_2fr] gap-6 w-4/5 mx-auto px-60 py-10 mt-36 bg-[#021E05] w-full">
+    <div class="grid grid-cols-1 md:grid-cols-[1fr_2fr] gap-6 w-4/5 mx-auto px-60 py-10 mt-36 bg-[#163832] w-full">
         <div>
             <div class="w-4/5 mx-auto text-3xl mb-10 text-[#FAF3E1] font-bold">
                 Features
@@ -215,8 +215,8 @@
             </div>
             <div class="flex justify-center items-center h-full">
                 <div class="h-full mt-20 w-4/5 bg-white rounded-xl shadow-xl p-6 flex flex-col bg-opacity-70 backdrop-blur-lg">
-                    <h3 class="text-4xl font-semibold text-[#021E05] mb-4">Contact Us</h3>
-                    <p class="text-xl mb-10 text-[#021E05]">For inquiries or special requests, please reach out to us.</p>
+                    <h3 class="text-4xl font-semibold text-[#163832] mb-4">Contact Us</h3>
+                    <p class="text-xl mb-10 text-[#163832]">For inquiries or special requests, please reach out to us.</p>
                     <form class="flex flex-col flex-grow justify-between h-full">
                         <div>
                             <input
@@ -228,7 +228,7 @@
                             <textarea placeholder="Your Message" class="w-full p-2 mb-4 border rounded opacity-70 placeholder-opacity-70 placeholder-gray-500"></textarea>
                         </div>
                         <div class="mt-auto text-left mb-10">
-                            <button type="submit" class="bg-[#021E05] hover:font-bold text-[#FAF3E1] font-semibold py-2 px-4 rounded">
+                            <button type="submit" class="bg-[#163832] hover:font-bold text-[#FAF3E1] font-semibold py-2 px-4 rounded">
                             Send Message
                             </button>
                         </div>
