--- a/wait-list.html
+++ b/wait-list.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-[#FFFBF2]">
-  <div class="max-w-md mx-auto mt-16 p-8 bg-[#021E05] shadow-xl">
+  <div class="max-w-md mx-auto mt-16 p-8 bg-[#163832] shadow-xl">
     <h1 class="text-2xl font-bold mb-4 text-[#FFFBF2]">Join Our Waitlist Testing</h1>
     <p class="text-[#9EB088] mb-8 font-medium">
       We are currently at capacity, but we would love to have you join our waitlist.
@@ -22,7 +22,7 @@
           id="name"
           name="name"
           required
-          class="w-full px-4 py-2 border border-[#9EB088] text-[#9EB088] rounded-md bg-[#021E05] focus:outline-none focus:ring-2 focus:ring-[#FFFBF2]"
+          class="w-full px-4 py-2 border border-[#9EB088] text-[#9EB088] rounded-md bg-[#163832] focus:outline-none focus:ring-2 focus:ring-[#FFFBF2]"
         />
       </div>
 
@@ -33,13 +33,13 @@
           id="email"
           name="email"
           required
-          class="w-full px-4 py-2 border border-[#9EB088] text-[#9EB088] rounded-md bg-[#021E05] focus:outline-none focus:ring-2 focus:ring-[#FFFBF2]"
+          class="w-full px-4 py-2 border border-[#9EB088] text-[#9EB088] rounded-md bg-[#163832] focus:outline-none focus:ring-2 focus:ring-[#FFFBF2]"
         />
       </div>
 
       <button
         type="submit"
-        class="w-full py-2 px-4 bg-[#021E05] border border-2 border-[#FFFBF2] hover:bg-[#FFFBF2] hover:text-[#021E05] hover:font-bold text-white font-semibold transition"
+        class="w-full py-2 px-4 bg-[#163832] border border-2 border-[#FFFBF2] hover:bg-[#FFFBF2] hover:text-[#163832] hover:font-bold text-white font-semibold transition"
       >
         Join Waitlist
       </button>
