--- a/learn-more.html
+++ b/learn-more.html
@@ -6,6 +6,27 @@
     <title>Document</title>
 
     <style>
+
+          body{
+      /* Open Sauce */
+      font-family: 'Open Sauce One', sans-serif;
+
+      /* Urbanist */
+      /* font-family: "Urbanist", sans-serif;
+      font-optical-sizing: auto;
+      font-style: normal;  */
+    }
+
+
+    h1, h2, h3, h4, h5{
+      font-family: "Noto Serif Display", serif;
+      font-optical-sizing: auto;
+      font-variation-settings:
+      "wght" 600,
+      "wdth" 100;
+    }
+
+
     /* CSS Code */
     .swiper-wrapper {
         width: 100%;
@@ -29,6 +50,17 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
+
+    <!-- Open Sauce -->
+<link href="https://fonts.cdnfonts.com/css/open-sauce-one" rel="stylesheet"> 
+
+<!-- Urbanist -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Noto+Serif+Display:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+                
+
+
 </head>
 <body class="bg-[#FAF3E1]">
 
@@ -41,18 +73,26 @@
     </div>
 
   <!-- Navbar -->
-  <nav id="navbar" class="fixed top-0 left-0 w-full z-40 flex items-center justify-between px-6 py-4 2xl:py-6 shadow-sm transition-transform duration-300 bg-[#163832]">
+  <nav id="navbar" class="fixed top-0 left-0 w-full z-40 flex items-center justify-between px-6 py-2 shadow-sm transition-transform duration-300 bg-[#163832]">
     
     <div class="flex items-center justify-between w-5/6 mx-auto">
-      <div class="text-[#FFFBF2] hover:text-[#E5DFC9] text-xl xl:text-2xl 2xl:text-3xl font-bold">MyBrand</div>
+      <div class="text-[#FFFBF2] hover:text-[#EBB902] text-xl xl:text-2xl 2xl:text-3xl font-bold">
+          <img
+            src="logo-sakanta-09.png"
+            alt="Logo"
+            class="h-16 inline-block mr-2"
+            onmouseover="this.src='logo-sakanta-02.png';"
+            onmouseout="this.src='logo-sakanta-09.png';"
+          >
+      </div>
       <ul class="hidden md:flex space-x-6 text-white font-medium">
-        <li><a href="#" class="text-[#FFFBF2] hover:text-[#E5DFC9] hover:font-bold transition font-semibold 2xl:text-xl">Home</a></li>
-        <li><a href="#" class="text-[#FFFBF2] hover:text-[#E5DFC9] hover:font-bold transition font-semibold 2xl:text-xl">About</a></li>
-        <li><a href="#" class="text-[#FFFBF2] hover:text-[#E5DFC9] hover:font-bold transition font-semibold 2xl:text-xl">Services</a></li>
-        <li><a href="#" class="text-[#FFFBF2] hover:text-[#E5DFC9] hover:font-bold transition font-semibold 2xl:text-xl">Contact</a></li>
+        <li><a href="#" class="text-[#FFFBF2] hover:text-[#EBB902] hover:font-bold transition 2xl:text-xl">Home</a></li>
+        <li><a href="#" class="text-[#FFFBF2] hover:text-[#EBB902] hover:font-bold transition 2xl:text-xl">About</a></li>
+        <li><a href="#" class="text-[#FFFBF2] hover:text-[#EBB902] hover:font-bold transition 2xl:text-xl">Services</a></li>
+        <li><a href="#" class="text-[#FFFBF2] hover:text-[#EBB902] hover:font-bold transition 2xl:text-xl">Contact</a></li>
         <li>
           <button onclick="toggleModal()" class="focus:outline-none">
-            <i class="fa-solid fa-circle-user text-[#FFFBF2] hover:text-[#E5DFC9] text-xl 2xl:text-2xl"></i>
+            <i class="fa-solid fa-circle-user text-[#FFFBF2] hover:text-[#EBB902] text-xl 2xl:text-2xl"></i>
           </button>
         </li>
       </ul>
@@ -70,43 +110,21 @@
 
     <!--HTML CODE-->
 
-
-
-
 <div class="w-full relative mx-auto pt-20">
-
-    <div class="absolute top-0 left-0 w-full h-[70vh] bg-[#163832] z-0"></div>
-
-    <div class="relative z-10 w-4/5 mx-auto text-gray-800">
-        <h1 class="text-center text-sm sm:text-lg md:text-xl mb-5 mt-10 text-[#EBB902]">PRIVATE VILLAS</h1>
-
-        <div class="flex flex-col md:flex-row items-center justify-between p-4 rounded-lg mb-10 ">
-        <button onclick="window.history.back()" class="text-[#FAF3E1] font-semibold hover:underline">
-            ← Back
-        </button>
-
-        <h1 class="text-2xl sm:text-4xl md:text-7xl font-bold text-[#FAF3E1] text-center">
-            Panoramic Pool Villa
-        </h1>
-
-        <div></div>
-        </div>
-    </div>
-
-    <div class="swiper fraction-slide-carousel swiper-container relative w-4/5">
+    <div class="swiper fraction-slide-carousel swiper-container relative w-full h-screen">
     <div class="swiper-wrapper">
     <div class="swiper-slide">
-    <div class="bg-indigo-50 h-96 flex justify-center items-center">
+    <div class="bg-indigo-50 flex justify-center items-center">
         <span class="text-3xl font-semibold text-indigo-600">Slide 1 </span>
     </div>
     </div>
     <div class="swiper-slide">
-    <div class="bg-indigo-50 h-96 flex justify-center items-center">
+    <div class="bg-indigo-50 flex justify-center items-center">
         <span class="text-3xl font-semibold text-indigo-600">Slide 2 </span>
     </div>
     </div>
     <div class="swiper-slide">
-    <div class="bg-indigo-50 h-96 flex justify-center items-center">
+    <div class="bg-indigo-50 flex justify-center items-center">
         <span class="text-3xl font-semibold text-indigo-600">Slide 3 </span>
     </div>
     </div>
@@ -126,10 +144,18 @@
     <div class="swiper-pagination"></div>
     </div>
 
+     <div class="relative z-10 w-4/5 mx-auto text-gray-800">
+        <div class="flex flex-col md:flex-row items-center justify-center p-4 rounded-lg mb-10 ">
+        <h1 class="text-4xl 2xl:text-5xl font-bold text-[#FAF3E1] text-center">
+            Panoramic Pool Villa
+        </h1>
+        </div>
+    </div>
+
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 w-4/5 mx-auto xl:mt-10 lg:mt-80">
         <div>
             <div class="w-4/5 mx-auto text-gray-800 mt-10 text-5xl font-thin">
-                Embracing beautiful Jimbaran Bay
+                River Villa
             </div>
 
             <div class="w-4/5 mx-auto text-gray-800 mt-10 text-5xl font-thin">
@@ -420,6 +446,28 @@
     }
     },
     });
+    </script>
+
+    <script>
+  const hero = document.getElementById('hero');
+  const navbar_web = document.getElementById('navbar');
+
+  const observer = new IntersectionObserver(
+    ([entry]) => {
+      if (entry.isIntersecting) {
+        // Hero masih terlihat
+        navbar_web.classList.remove('bg-[#163832]', 'shadow-md');
+        navbar_web.classList.add('bg-transparent');
+      } else {
+        // Sudah scroll lewat hero
+        navbar_web.classList.add('bg-[#163832]', 'shadow-md');
+        navbar_web.classList.remove('bg-transparent');
+      }
+    },
+    { threshold: 0.1 } // Ubah sesuai kebutuhan
+  );
+
+  observer.observe(hero);
     </script>
 </body>
 </html>
