--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     
 </head>
-<body class="relative overflow-x-hidden bg-[#FFFBF2]">
+<body class="relative overflow-x-hidden">
 
   <div id="userModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
     <div class="bg-white p-6 rounded-xl shadow-xl w-80 relative">
@@ -114,14 +114,14 @@
 
 
   <!-- Navbar -->
-  <nav id="navbar" class="fixed top-0 left-0 w-full z-40 flex items-center justify-between px-6 py-4 shadow-sm transition-transform duration-300 bg-[#163832]">
+  <nav id="navbar" class="fixed top-0 left-0 w-full z-40 flex items-center justify-between px-6 py-2 shadow-sm transition-transform duration-300 bg-[#163832]">
     
     <div class="flex items-center justify-between w-5/6 mx-auto">
       <div class="text-[#FFFBF2] hover:text-[#EBB902] text-xl xl:text-2xl 2xl:text-3xl font-bold">
           <img
             src="logo-sakanta-09.png"
             alt="Logo"
-            class="h-20 w-full inline-block mr-2"
+            class="h-16 inline-block mr-2"
             onmouseover="this.src='logo-sakanta-02.png';"
             onmouseout="this.src='logo-sakanta-09.png';"
           >
