--- a/learn-more.html
+++ b/learn-more.html
@@ -111,7 +111,7 @@
     <!--HTML CODE-->
 
 <div class="w-full relative mx-auto pt-20">
-    <div class="swiper fraction-slide-carousel swiper-container relative w-full h-screen">
+    <div class="swiper fraction-slide-carousel swiper-container relative w-full h-screen" id="hero">
     <div class="swiper-wrapper">
     <div class="swiper-slide">
     <div class="bg-indigo-50 flex justify-center items-center">
