--- a/home.html
+++ b/home.html
@@ -641,13 +641,12 @@
         <img src="logo-sakanta-04.png" alt="" class="w-full h-20">
       </a>
       <div class="flex items-center justify-between w-full max-w-xl mx-auto flex-col  2xl:flex-col 2xl:items-start">
-        <p class="py-1 text-gray-500 lg:max-w-xs text-center md:text-start lg:text-left mb-3 pl-4">Trusted in more than 100 countries & 5 million customers. Have any query ?</p>
-        <a href="javascript:;" class="py-2.5 px-5 h-9 block w-fit bg-indigo-600 rounded-full shadow-sm text-xs text-white mx-auto transition-all  duration-500 hover:bg-indigo-700 lg:mx-0"> Contact us </a>
+        <p class="py-1 text-gray-500 lg:max-w-xs text-center md:text-start lg:text-left mb-3 pl-4">Built on trust, transparency, and co-ownership.</p>
       </div>
       </div>
       <!--End Col-->
       <div class="lg:mx-auto text-left">
-      <h4 class="text-lg text-gray-900 font-medium mb-7">Pagedone</h4>
+      <h4 class="text-lg text-gray-900 font-medium mb-7">Sakanta</h4>
       <ul class="text-sm  transition-all duration-500 ">
         <li class="mb-6">
           <a href="javascript:;" class="text-gray-600 hover:text-gray-900">Home</a>
@@ -656,10 +655,10 @@
           <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">About</a>
         </li>
         <li class="mb-6">
-          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">Pricing</a>
+          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">Services</a>
         </li>
         <li>
-          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">Features</a>
+          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">Contact</a>
         </li>
       </ul>
       </div>
