--- a/home.html
+++ b/home.html
@@ -632,8 +632,8 @@
 
             <hr class="border-gray-300"/>
 
-            <footer class="w-full">
-      <div class=" mx-auto max-w-7xl">
+    <footer class="w-full">
+      <div class=" mx-auto w-5/6">
       <!--Grid-->
       <div class="grid grid-cols-2 md:grid-cols-5 gap-8 py-10 ">
       <div class="mb-10 col-span-2 md:col-span-1 lg:mb-0 flex items-center flex-col 2xl:items-start">
