--- a/learn-more.html
+++ b/learn-more.html
@@ -327,7 +327,7 @@
 
     <div class = "text-[#163832] min-h-screen bg-[#FFFBF2] py-24">
       <p class="text-3xl 2xl:text-5xl w-[70%] font-semibold mx-auto mb-10 text-center" >More Homes to Love</p>
-        <div class="w-[70%] relative mx-auto px-4 h-[69vh] md:h-[50vh] lg:h-[45vh] xl:h-[70vh] mb-16">
+        <div class="w-[70%] relative mx-auto px-4 h-[69vh] md:h-[50vh] lg:h-[45vh] xl:h-[70vh]">
                 <!-- Carousel Content -->
                 <div class="overflow-x-hidden overflow-y-hidden relative h-[65vh] md:h-[50vh] lg:h-[40vh] xl:h-[57vh]">
                     <div id="carousel-track" class="flex gap-x-[13px] 2xl:gap-x-[15px] transition-transform duration-500 items-stretch h-full">
@@ -454,87 +454,87 @@
     </div> -->
 
 
-    <footer class="w-full mt-36">
-      <div class=" mx-auto max-w-7xl">
+    <footer class="w-full bg-[#163832] text-[#FFFBF2]">
+      <div class="w-5/6 mx-auto">
       <!--Grid-->
       <div class="grid grid-cols-2 md:grid-cols-5 gap-8 py-10 ">
       <div class="mb-10 col-span-2 md:col-span-1 lg:mb-0 flex items-center flex-col 2xl:items-start">
       <a href="" class="flex justify-center lg:justify-start">
-        <img src="logo-sakanta-04.png" alt="" class="w-full h-20">
+        <img src="logo-sakanta-09.png" alt="" class="w-full h-20">
       </a>
       <div class="flex items-center justify-between w-full max-w-xl mx-auto flex-col  2xl:flex-col 2xl:items-start">
-        <p class="py-1 text-gray-500 lg:max-w-xs text-center md:text-start lg:text-left mb-3 pl-4">Built on trust, transparency, and co-ownership.</p>
+        <p class="py-1  lg:max-w-xs text-center md:text-start lg:text-left mb-3 pl-4">Built on trust, transparency, and co-ownership.</p>
       </div>
       </div>
       <!--End Col-->
       <div class="lg:mx-auto text-left">
-      <h4 class="text-lg text-gray-900 font-medium mb-7">Sakanta</h4>
+      <h4 class="text-lg font-medium mb-7">Sakanta</h4>
       <ul class="text-sm  transition-all duration-500 ">
         <li class="mb-6">
-          <a href="javascript:;" class="text-gray-600 hover:text-gray-900">Home</a>
+          <a href="javascript:;" class="">Home</a>
         </li>
         <li class="mb-6">
-          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">About</a>
+          <a href="javascript:;" class=" ">About</a>
         </li>
         <li class="mb-6">
-          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">Services</a>
+          <a href="javascript:;" class=" ">Services</a>
         </li>
         <li>
-          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">Contact</a>
+          <a href="javascript:;" class=" ">Contact</a>
         </li>
       </ul>
       </div>
       <!--End Col-->
       <div class="lg:mx-auto text-left">
-      <h4 class="text-lg text-gray-900 font-medium mb-7">Products</h4>
+      <h4 class="text-lg font-medium mb-7">Products</h4>
       <ul class="text-sm  transition-all duration-500">
         <li class="mb-6">
-          <a href="javascript:;" class="text-gray-600 hover:text-gray-900">Figma UI System</a>
+          <a href="javascript:;" class="">Figma UI System</a>
         </li>
         <li class="mb-6">
-          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">Icons Assets</a>
+          <a href="javascript:;" class=" ">Icons Assets</a>
         </li>
         <li class="mb-6">
-          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">Responsive Blocks</a>
+          <a href="javascript:;" class=" ">Responsive Blocks</a>
         </li>
         <li>
-          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">Components Library</a>
+          <a href="javascript:;" class=" ">Components Library</a>
         </li>
       </ul>
       </div>
       <!--End Col-->
       <div class="lg:mx-auto text-left">
-      <h4 class="text-lg text-gray-900 font-medium mb-7">Resources</h4>
+      <h4 class="text-lg font-medium mb-7">Resources</h4>
       <ul class="text-sm  transition-all duration-500">
         <li class="mb-6">
-          <a href="javascript:;" class="text-gray-600 hover:text-gray-900">FAQs</a>
+          <a href="javascript:;" class="">FAQs</a>
         </li>
         <li class="mb-6">
-          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">Quick Start</a>
+          <a href="javascript:;" class=" ">Quick Start</a>
         </li>
         <li class="mb-6">
-          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">Documentation</a>
+          <a href="javascript:;" class=" ">Documentation</a>
         </li>
         <li>
-          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">User Guide</a>
+          <a href="javascript:;" class=" ">User Guide</a>
         </li>
       </ul>
       </div>
       <!--End Col-->
       <div class="lg:mx-auto text-left">
-      <h4 class="text-lg text-gray-900 font-medium mb-7">Blogs</h4>
+      <h4 class="text-lg font-medium mb-7">Blogs</h4>
       <ul class="text-sm  transition-all duration-500">
         <li class="mb-6">
-          <a href="javascript:;" class="text-gray-600 hover:text-gray-900">News</a>
+          <a href="javascript:;" class="">News</a>
         </li>
         <li class="mb-6">
-          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">Tips & Tricks</a>
+          <a href="javascript:;" class=" ">Tips & Tricks</a>
         </li>
         <li class="mb-6">
-          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">New Updates</a>
+          <a href="javascript:;" class=" ">New Updates</a>
         </li>
         <li>
-          <a href="javascript:;" class=" text-gray-600 hover:text-gray-900">Events</a>
+          <a href="javascript:;" class=" ">Events</a>
         </li>
       </ul>
       </div>
@@ -542,7 +542,7 @@
       <!--Grid-->
       <div class="py-7 border-t border-gray-200">
       <div class="flex items-center justify-center flex-col lg:justify-between lg:flex-row">
-      <span class="text-sm text-gray-500 ">©<a href="https://pagedone.io/">Sakanta</a> 2024, All rights reserved.</span>
+      <span class="text-sm ">©<a href="https://pagedone.io/">Sakanta</a> 2024, All rights reserved.</span>
       <div class="flex mt-4 space-x-4 sm:justify-center lg:mt-0 ">
         <a href="javascript:;" class="w-9 h-9 rounded-full bg-gray-700 flex justify-center items-center hover:bg-indigo-600">
           <svg class=" text-white" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
