--- a/home.html
+++ b/home.html
@@ -180,7 +180,7 @@
       </div> -->
 
 
-      <div class = "min-h-screen text-[#163832] bg-[#FFFBF2] py-28">
+      <div id = "page-1" class = "min-h-screen text-[#163832] bg-[#FFFBF2] py-28">
           <div 
           class = "grid grid-cols-1 md:grid-cols-3 w-5/6 px-16 mx-auto gap-4">
           <!-- class = "flex gap-x-8 w-5/6 px-6 mx-auto items-center justify-center h-[57vh]" -->
@@ -413,7 +413,7 @@
                           <h2
                             class="text-4xl text-center font-bold text-[#FAF3E1] leading-[3.25rem] lg:text-left"
                           >
-                            Still confused?
+                            Still Confused?
                           </h2>
                         </div>
                         <div class="accordion-group" data-accordion="default-accordion">
@@ -425,7 +425,7 @@
                               class="accordion-toggle group inline-flex items-center justify-between font-normal text-xl leading-8 text-gray-600 w-full transition duration-500 text-[#FAF3E1] hover:text-[#EBB902] accordion-active:text-[#EBB902] accordion-active:font-medium"
                               aria-controls="basic-collapse-one-with-arrow-always-open"
                             >
-                              <h5 class="text-base text-[#FAF3E1] group-hover:text-[#EBB902] accordion-active">Have any trust issue?</h5>
+                              <h5 class="text-base text-[#FAF3E1] group-hover:text-[#EBB902] accordion-active">How does co-ownership work?</h5>
                               <svg
                                 class="transition duration-500 text-[#FAF3E1] group-hover:text-[#EBB902] accordion-active:rotate-180"
                                 width="22"
@@ -450,10 +450,7 @@
                               style=""
                             >
                               <p class="text-base text-[#C7CEA5] font-normal text-start">
-                                Our focus on providing robust and user-friendly content
-                                management capabilities ensures that you can manage your
-                                content with confidence, and achieve your content
-                                marketing goals with ease.
+                               Co-ownership allows multiple buyers to collectively own a luxury vacation home. Each owner purchases a share (e.g., 1/8), giving them the right to use the property for a set number of days per year. Ownership is legally structured and professionally managed.
                               </p>
                             </div>
                           </div>
@@ -465,7 +462,7 @@
                               class="accordion-toggle group inline-flex items-center justify-between font-normal text-xl leading-8 text-gray-600 w-full transition duration-500 hover:text-indigo-600 accordion-active:text-indigo-600 accordion-active:font-medium"
                               aria-controls="basic-collapse-two-with-arrow-always-open"
                             >
-                              <h5 class="text-base text-[#FAF3E1] group-hover:text-[#EBB902] accordion-active">Have any trust issue?</h5>
+                              <h5 class="text-base text-[#FAF3E1] group-hover:text-[#EBB902] accordion-active">Can I sell my share in the future?</h5>
                               <svg
                                 class="transition duration-500 text-[#FAF3E1] group-hover:text-[#EBB902] accordion-active:rotate-180"
                                 width="22"
@@ -490,10 +487,7 @@
                               style=""
                             >
                               <p class="text-base text-[#C7CEA5] font-normal text-start">
-                                Our focus on providing robust and user-friendly content
-                                management capabilities ensures that you can manage your
-                                content with confidence, and achieve your content
-                                marketing goals with ease.
+                                Yes. After a minimum holding period (e.g., 12 months), you can list your share for resale. We assist in connecting you with interested buyers to ensure a smooth and transparent resale process.
                               </p>
                             </div>
                           </div>
@@ -505,7 +499,7 @@
                               class="accordion-toggle group inline-flex items-center justify-between text-xl font-normal leading-8 text-gray-600 w-full transition duration-500 hover:text-indigo-600 accordion-active:font-medium accordion-active:text-indigo-600"
                               aria-controls="basic-collapse-three-with-arrow-always-open"
                             >
-                              <h5 class="text-base text-[#FAF3E1] group-hover:text-[#EBB902] accordion-active">How can I reset my password?</h5>
+                              <h5 class="text-base text-[#FAF3E1] group-hover:text-[#EBB902] accordion-active">Who manages the property?</h5>
                               <svg
                                 class="transition duration-500 text-[#FAF3E1] group-hover:text-[#EBB902] accordion-active:rotate-180"
                                 width="22"
@@ -529,10 +523,7 @@
                               aria-labelledby="basic-heading-three-with-arrow-always-open"
                             >
                               <p class="text-base text-[#C7CEA5] font-normal text-start">
-                                Our focus on providing robust and user-friendly content
-                                management capabilities ensures that you can manage your
-                                content with confidence, and achieve your content
-                                marketing goals with ease.
+                                We handle all aspects of management — from maintenance and cleaning to scheduling and concierge services. Owners enjoy the property without the hassle of day-to-day upkeep.
                               </p>
                             </div>
                           </div>
@@ -544,7 +535,7 @@
                               class="accordion-toggle group inline-flex items-center justify-between text-xl font-normal leading-8 text-gray-600 w-full transition duration-500 hover:text-indigo-600 accordion-active:font-medium accordion-active:text-indigo-600"
                               aria-controls="basic-collapse-four-with-arrow-always-open"
                             >
-                              <h5 class="text-base text-[#FAF3E1] group-hover:text-[#EBB902] accordion-active">What is the payment process?</h5>
+                              <h5 class="text-base text-[#FAF3E1] group-hover:text-[#EBB902] accordion-active">How is time at the home scheduled?</h5>
                               <svg
                                 class="transition duration-500 text-[#FAF3E1] group-hover:text-[#EBB902] accordion-active:rotate-180"
                                 width="22"
@@ -568,10 +559,7 @@
                               aria-labelledby="basic-heading-four-with-arrow-always-open"
                             >
                               <p class="text-base text-[#C7CEA5] font-normal text-start">
-                                Our focus on providing robust and user-friendly content
-                                management capabilities ensures that you can manage your
-                                content with confidence, and achieve your content
-                                marketing goals with ease.
+                                We use a fair and flexible scheduling system that ensures all co-owners get equitable access throughout the year, including peak seasons. You can plan ahead or book spontaneously based on availability.
                               </p>
                             </div>
                           </div>
@@ -589,10 +577,10 @@
 
     <div class="relative min-h-screen flex items-center justify-start bg-cover bg-center text-white py-28 pl-52" style="background-image: url('wait-list.jpg');">
       <div class="w-full max-w-md mr-auto p-8 bg-[#163832] shadow-xl rounded-lg">
-        <h1 class="text-2xl font-bold mb-4 text-[#FFFBF2]">Join Our Waitlist Testing</h1>
+        <h1 class="text-2xl font-bold mb-4 text-[#FFFBF2]">Join Our Waitlist</h1>
         <p class="text-[#9EB088] mb-8 font-medium">
-          We are currently at capacity, but we would love to have you join our waitlist.
-          Please fill out the form below, and we will notify you as soon as a spot becomes available.
+          We would love to have you join our waitlist. Please fill out the form below, 
+          and we’ll notify you when we have active listings available.
         </p>
         
         <form action="/submit-waitlist" method="post" class="space-y-6">
@@ -840,6 +828,12 @@
     y: 100,        
     opacity: 0,         
     ease: "none"
+  });
+</script>
+
+<script>
+    document.getElementById("hero-button").addEventListener("click", function () {
+    document.getElementById("page-1").scrollIntoView({ behavior: "smooth" });
   });
 </script>
 
