--- a/learn-more.html
+++ b/learn-more.html
@@ -174,27 +174,21 @@
           River Villa
         </div>
 
-        <p class="mb-2 text-start text-xl 2xl:text-2xl text-[#163832]"><span class="font-semibold">$1,250,000</span>
-          <span class="mb-2">1/4 ownership</span></p>
-        <p class="mb-2 text-start 2xl:text-md font-medium mb-3 text-[#163832]">4 <i class="fa-solid fa-bed"></i> |
-          5 <i class="fa-solid fa-bath"></i> | 5,230 sq ft</p>
-        <p class="mb-2 leading-tight 2xl:text-md text-start text-[#163832]">88 Sunset Bluff Dr, Big Sky, MT 59716
+        <p class="mb-2 text-start text-xl 2xl:text-2xl text-[#163832]"><span class="font-semibold">$231,250</span>
+          <span class="mb-2">1/8 ownership</span></p>
+        <p class="mb-2 text-start 2xl:text-md font-medium mb-3 text-[#163832]">5 <i class="fa-solid fa-bed"></i> |
+          5 <i class="fa-solid fa-bath"></i> | 459 m²</p>
+        <p class="mb-2 leading-tight 2xl:text-md text-start text-[#163832]">Canggu, Banjar Uma
         </p>
 
 
         <div class="text-[#163832] mt-10 font-thin">
-          Featuring outdoor dining, a private pool, sun loungers, and uninterrupted ocean and sunset hues, this 470 sqm
-          villa includes a gazebo, indoor bathtub with ocean views, and a spacious bed, all crafted for a tranquil,
-          effortless stay. <br> <br>
+          Presenting River Villa - a luxurious villa just 200 meters from Lyma Beach, Pererenan - perfect for discerning investors.
+          Stunning apartments with spectacular oceanfront views on one of Bali's most expensive streets, Berawa.
 
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut commodi incidunt dolores neque possimus qui
-          totam earum atque sapiente dolorum sed vero, ea eveniet eos repellat facilis excepturi minima quae et cum
-          tempore sequi obcaecati?
-          <br><br>
-          Expedita, qui omnis aliquid magnam dicta, accusamus obcaecati possimus modi ipsum enim atque, ab sapiente.
-          Maxime distinctio saepe qui debitis libero optio molestiae explicabo. Omnis beatae quaerat assumenda
-          accusantium
-          asperiores, quia sequi dolores rem cupiditate aut eaque hic saepe, tempora quos ab?
+          You can choose from designer finishes in either dark or light.
+
+          The complex has a good strategic location, which makes it attractive both in terms of living and investment.
 
         </div>
 
