Update home villa detail

--- a/home.html
+++ b/home.html
@@ -256,10 +256,10 @@
                           
                           <div class="flex flex-col justify-between flex-1 pb-6 pt-3 px-4">
                             <div>
-                              <p class="text-xl 2xl:text-2xl text-start mb-2 font-semibold text-[#253A28]">Villa 1</p>
-                              <p class="text-start text-sm 2xl:text-base text-[#253A28]"><span class = "font-semibold">$900,000</span> <span class="ml-2">1/8 ownership</span></p>
-                              <p class="text-start text-sm 2xl:text-base font-medium mb-3 text-[#253A28]">5 <i class="fa-solid fa-bed"></i> | 6 <i class="fa-solid fa-bath"></i> | 4,761 sq ft</p>
-                              <p class="leading-tight text-sm 2xl:text-base text-start text-[#253A28]">127 Blue Heron Pond Rd, Kiawah Island, SC 29455</p>
+                              <p class="text-xl 2xl:text-2xl text-start mb-2 font-semibold text-[#253A28]">River Villa</p>
+                              <p class="text-start text-sm 2xl:text-base text-[#253A28]"><span class = "font-semibold">$1,850,000</span> <span class="ml-2">1/8 ownership</span></p>
+                              <p class="text-start text-sm 2xl:text-base font-medium mb-3 text-[#253A28]">5 <i class="fa-solid fa-bed"></i> | 5 <i class="fa-solid fa-bath"></i> | 459 m²</p>
+                              <p class="leading-tight text-sm 2xl:text-base text-start text-[#253A28]">Canggu, Banjar Uma</p>
                             </div>
                           </div>
                         </a>
@@ -269,10 +269,10 @@
                           <img class="w-full object-cover aspect-[3/2] rounded-t-lg" src="/villa2.jpg" alt="Sunset in the mountains">
                           <div class="flex flex-col justify-between flex-1 pb-6 pt-4 px-6">
                             <div>
-                              <p class="text-xl 2xl:text-2xl text-start mb-2 font-semibold text-[#253A28]">Villa 7</p>
-                              <p class="text-start text-sm 2xl:text-base text-[#253A28]"><span class="font-semibold">$1,250,000</span> <span class="ml-2">1/4 ownership</span></p>
-                              <p class="text-start text-sm 2xl:text-base font-medium mb-3 text-[#253A28]">4 <i class="fa-solid fa-bed"></i> | 5 <i class="fa-solid fa-bath"></i> | 5,230 sq ft</p>
-                              <p class="leading-tight text-sm 2xl:text-base text-start text-[#253A28]">88 Sunset Bluff Dr, Big Sky, MT 59716</p>
+                              <p class="text-xl 2xl:text-2xl text-start mb-2 font-semibold text-[#253A28]">Villa Medetarinian</p>
+                              <p class="text-start text-sm 2xl:text-base text-[#253A28]"><span class="font-semibold">$908,533</span> <span class="ml-2">1/4 ownership</span></p>
+                              <p class="text-start text-sm 2xl:text-base font-medium mb-3 text-[#253A28]">4 <i class="fa-solid fa-bed"></i> | 5 <i class="fa-solid fa-bath"></i> | 370 m²</p>
+                              <p class="leading-tight text-sm 2xl:text-base text-start text-[#253A28]">Kuta, Central Badung</p>
                             </div>
                           </div>
                         </a>
@@ -282,10 +282,10 @@
                           <img class="w-full object-cover aspect-[3/2] rounded-t-lg" src="/villa3.jpg" alt="Sunset in the mountains">
                           <div class="flex flex-col justify-between flex-1 pb-6 pt-4 px-6">
                             <div>
-                              <p class="text-xl 2xl:text-2xl text-start mb-2 font-semibold text-[#253A28]">Villa Serenity</p>
-                              <p class="text-start text-sm 2xl:text-base text-[#253A28]"><span class="font-semibold">$780,000</span> <span class="ml-2">1/10 ownership</span></p>
-                              <p class="text-start text-sm 2xl:text-base font-medium mb-3 text-[#253A28]">3 <i class="fa-solid fa-bed"></i> | 4 <i class="fa-solid fa-bath"></i> | 3,600 sq ft</p>
-                              <p class="leading-tight text-start text-sm 2xl:text-base text-[#253A28]">15 Ocean Breeze Way, Malibu, CA 90265</p>
+                              <p class="text-xl 2xl:text-2xl text-start mb-2 font-semibold text-[#253A28]">Villa in Mengwi</p>
+                              <p class="text-start text-sm 2xl:text-base text-[#253A28]"><span class="font-semibold">$2,150,161</span> <span class="ml-2">1/10 ownership</span></p>
+                              <p class="text-start text-sm 2xl:text-base font-medium mb-3 text-[#253A28]">5 <i class="fa-solid fa-bed"></i> | 5 <i class="fa-solid fa-bath"></i> | 780 m²</p>
+                              <p class="leading-tight text-start text-sm 2xl:text-base text-[#253A28]">Seseh, Mengwi</p>
                             </div>
                           </div>
                         </a>
@@ -295,10 +295,10 @@
                           <img class="w-full object-cover aspect-[3/2] rounded-t-lg" src="/villa4.jpg" alt="Sunset in the mountains">
                           <div class="flex flex-col justify-between h-2/5 pb-6 pt-4 px-6">
                             <div>
-                              <p class="text-xl 2xl:text-2xl text-start mb-2 font-semibold text-[#253A28]">Villa Horizon</p>
-                              <p class="text-start text-sm 2xl:text-base text-[#253A28]"><span class="font-semibold">$2,150,000</span> <span class="ml-2">1/6 ownership</span></p>
-                              <p class="text-start text-sm 2xl:text-base font-medium mb-3 text-[#253A28]">6 <i class="fa-solid fa-bed"></i> | 7 <i class="fa-solid fa-bath"></i> | 7,100 sq ft</p>
-                              <p class="leading-tight text-start text-sm 2xl:text-base text-[#253A28]">302 Palm Drive, Naples, FL 34102</p>
+                              <p class="text-xl 2xl:text-2xl text-start mb-2 font-semibold text-[#253A28]">Villa in Selemadeg</p>
+                              <p class="text-start text-sm 2xl:text-base text-[#253A28]"><span class="font-semibold">$1,750,000</span> <span class="ml-2">1/6 ownership</span></p>
+                              <p class="text-start text-sm 2xl:text-base font-medium mb-3 text-[#253A28]">8 <i class="fa-solid fa-bed"></i> | 10 <i class="fa-solid fa-bath"></i> | 1440 m²</p>
+                              <p class="leading-tight text-start text-sm 2xl:text-base text-[#253A28]">Selemadeng, Tabanan</p>
                             </div>
                           </div>
                         </a>
@@ -308,10 +308,10 @@
                           <img class="w-full object-cover aspect-[3/2] rounded-t-lg" src="/villa5.jpg" alt="Sunset in the mountains">
                           <div class="flex flex-col justify-between h-2/5 pb-6 pt-4 px-6">
                             <div>
-                              <p class="text-xl 2xl:text-2xl text-start mb-2 font-semibold text-[#253A28]">Villa Nova</p>
-                              <p class="text-start text-sm 2xl:text-base text-[#253A28]"><span class="font-semibold">$985,000</span> <span class="ml-2">1/8 ownership</span></p>
-                              <p class="text-start font-medium text-sm 2xl:text-base mb-3 text-[#253A28]">4 <i class="fa-solid fa-bed"></i> | 5 <i class="fa-solid fa-bath"></i> | 4,020 sq ft</p>
-                              <p class="leading-tight text-start text-sm 2xl:text-base text-[#253A28]">219 Maple Ridge Ln, Aspen, CO 81611</p>
+                              <p class="text-xl 2xl:text-2xl text-start mb-2 font-semibold text-[#253A28]">Villa in Seminyak</p>
+                              <p class="text-start text-sm 2xl:text-base text-[#253A28]"><span class="font-semibold">$988,337</span> <span class="ml-2">1/8 ownership</span></p>
+                              <p class="text-start font-medium text-sm 2xl:text-base mb-3 text-[#253A28]">4 <i class="fa-solid fa-bed"></i> | 4 <i class="fa-solid fa-bath"></i> | 280 m²</p>
+                              <p class="leading-tight text-start text-sm 2xl:text-base text-[#253A28]">Seminyak, Central Badung</p>
                             </div>
                           </div>
                         </a>
